# course-info-api

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  db_init.sql  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py  models.py  repositories.py  security.py
app/routers/: auth.py  authors.py  courses.py  grades.py
docs/: ARCHITECTURE.md  JWT_FLOW.md  api-ddd-design.drawio  openapi.json  openapi.yml
tests/: conftest.py  test_auth.py  test_authors.py  test_courses.py  test_database.py  test_grades.py
